# yukiguni

./: .gitignore  README.md  README.zh-TW.md
apps/api/: .dockerignore  .env.docker.example  .env.example  Dockerfile  README.md  job_queue.py  main.py  pyproject.toml  r2_storage.py  requests.http  schemas.py  settings.py  tasks.py  validation.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 57a9f0d8c2b1_add_analysis_result_to_analysis_jobs.py  9d277522507d_add_video_metadata_columns_to_analysis_.py  a5cc31e9b4f6_add_processing_lifecycle_timestamps.py  bf6f1fb9b6e3_make_video_metadata_nullable.py  ce0d37adca9e_create_analysis_jobs_table.py
apps/api/app/: job_queue.py  main.py  r2_storage.py  schemas.py  settings.py  tasks.py
apps/api/app/api/: job_rows.py  jobs.py  main.py  schemas.py  upload_validation.py  validation.py
apps/api/app/core/: job_status.py  settings.py
apps/api/app/services/: analysis_results.py  pose_landmarks.py  r2_storage.py  temp_files.py  video_normalize.py  video_probe.py
apps/api/app/workers/: job_queue.py  job_state.py  jobs.py  tasks.py
apps/api/docs/: analysis_jobs.md
apps/api/http/: requests.http
apps/api/sql/: 000_initial_schema.sql  001_add_video_metadata_columns.sql
apps/web/: eslint.config.js  package-lock.json  package.json
apps/web/src/: App.module.css  App.tsx  index.css  main.tsx
apps/web/src/app/: routes.tsx
apps/web/src/features/analysis-flow/: api.ts  types.ts
apps/web/src/lib/: config.ts
apps/web/src/pages/: HomePage.tsx  NotFoundPage.tsx
samples/: manifest.json
(+23 files in other folders)
