[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.5",
    "boto3>=1.42.91",
    "fastapi>=0.128.8",
    "psycopg[binary]>=3.2.13",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.39.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
